# MLwithC

./: README.md
10Chapter_ensemble_learning/: README_ensemble_learning  README_ensembles_with_shark-ml  bagging_with_gradient_boosting_machine  decision_tree_algo_overview  decision_tree_decision-rule  gradient_boosting_methods_for_creating_ensembles  overfitting-pruning_decision_tree  overview_of_ensemble_learning  random_forest_overview  shark-ml_random_forest.cpp  shark-ml_stacking_ensemble.cpp  shogun-lib_random_forest.cpp  shogun-library_gradient_boosting.cpp  stacking_approach_for_creating_ensembles
10Chapter_ensemble_learning/Sharkml/sharkml/: CMakeLists.txt  sharkml-ensemble.cpp
11Chapter_neural_networks_for_image_classification/: Activation_functions_overview  HE-initialization_method  LeNet-Architecture_Network_training.cpp  LeNet-Architecture_reading__Convolution_Neural_Network_definition.cpp  LeNet-Architecture_reading__dataset_file_example.cpp  LeNet-Architecture_reading__the_image_file.cpp  LeNet-Architecture_reading_the_Training_dataset_example.cpp  README_Dlib_network_regression_task_example  README_neural_networks_for_image_classification  README_shark-ml_regression_task_example  README_shogun_architecture_network_regression_task  README_simple_network_example_for_the_regression_task  Stepwise_activation_function  The_perceptron_and_neural_network  Training_with_the_backpropagation_method  activation_function_properties  backpropagation_method_example_overview_nutshell  batch_mode_Back-Propagation  batch_normalization_solution_to_overfitting  convolution-operator  convolution_network_architecture  delving_into_convolutional_networks  different_methods_for_regularization  examples_of_using_Cpp_libraries_to_create_neural_networks  hyperbolic_tangent  linear_activation_function  loss_function  mini-batch_mode_Back-Propagation  mlp-dlib_example.cpp  mlp-sharkml_example.cpp  mlp-shogun_example.cpp  neural_network_initialization  neural_networks_overview  neurons  pooling_operation  receptive_field  regularization_in_neural_networks  shark-ML-architecture_Network_training  shark-ML-architecture_optimizer_configuration  shark-ML-architercutre_loss_function_definition  (+7 more)
14Chapter_sentiment_with_recurrent_neural_networks/: Bidirectional_RNN_variation_of_LSTM_architecture  GRU_variation_of_LSTM_architecture  GloVe_embedding_word_NLP_overview  LSTM_RNN_architectures  Overrive_of_RNN_implementation_training_cycle_iteration  README_LSTM_SetimentRNNImpl_PyTorch_explained  README_creating_RNN_LSTM_architecture  README_how_to_get_hidden_states_last_top_layers  README_nn_torch_forward_method  README_permutation_sort_custom_function  README_pytorch_PackedLSTM_overview  README_pytorch_data_loader_object  README_sentiment_analysis_with_recurrent_neural_networks  README_useful_pytorch_methods_explained  RNN_concept_overview  RNN_work_representation.cpp  RNNs_natural_language_processing_overview  embedding_word_for_NLP_Word2Vec_overview  forward_method_implementation_if_you_read_one_of_the_files_read_this_one  multilayer_RNN_variation_of_LSTM_architecture  optimizer_choose_explained  training_RNNs_using_the_concept_of_backpropagation
16Chapter_exporting_and_importing_models/: ONNX-format_example.onnx  Pytorch_neural_network_initialization_using_torch-serialize-OutputArchive.cpp  Pytroch_neural_network_initialization_using_torch-save_torch-load_function.cpp  README_exporting_and_importing_models  README_important_tips_on_the_library_that_was_discussed_VERY_IMPORTANT  README_loading_images_into_Caffe2_tensors  README_model_serialization_with_PyTorch  README_onnx-format_example.txt  caffe2_API_example.cpp  loading_images_into_Caffe2_tensors.cpp  model_serialization_with_Dlib.cpp  model_serialization_with_shark-ml.cpp  model_serialization_with_shogun.cpp  onnx-format-example2_reading_the_class_definition_file.cpp  preparing_the_Pytorch_neural_network_initializatin.cpp
17Chapter_deploying_models_on_mobile_and_Cloud_Platforms/: README_deploying_models_on_mobile_and_cloud_platforms  TorchScript_model_image_classification.py  Unsing_TorchScript_for_a_model_snapshot  image_classificaion_on_andriod_mobile
2Chapter/: Inversting  MSE_steps  Techniques_of_ML  Tensor_representation_in_computing  Unsupervised_learning  concepts_of_linear_algebra  eigen_example.cpp  linear_regression_goal  linear_regression_with_Dlib.cpp  model_parameter_estimation  solving_linear_regression_task_with_eigen.cpp  solving_linear_regression_task_with_shogun.cpp  solving_linear_regression_tasks_with_shark-ml.cpp  supervised_learning  the2types  xtensor_example.cpp
9Chapter_recommender_systems/Eigen/: CMakeLists.txt  data_loader.h  eigen_recommender.cpp
Android_classify/android_classify/app/src/cpp/: CMakeLists.txt  native-lib.cpp
Eigen_samples/eigen_samples/: CMakeLists.txt  linalg_eigen.cpp  linreg_eigen.cpp
Sharkml/sharkml/: CMakeLists.txt  data.cpp  data.h  grid-shark.cpp  monitor.h  plot.cpp  plot.h  polynomial-model.h  polynomial-regression.h  regression-shark.cpp
Sharkml_samples/sharkml/: CMakeLists.txt  linalg_shark.cpp  linreg_shark.cpp
Shogun-load-save/shogun-save/: CMakeLists.txt  shogun-save.cpp
csv/cpp/: CMakeLists.txt  csv.cpp
csv/dlib/: CMakeLists.txt  csv_dlib.cpp
csv/json/cpp/: CMakeLists.txt  json.cpp  paper.h  review.h  reviewsreader.cpp  reviewsreader.h
csv/sharkml/: CMakeLists.txt  csv_shark.cpp
dlib-neural_net_class/mlp-dlib/: CMakeLists.txt  mlp-dlib.cpp
dlib-save_/dlib-save/: CMakeLists.txt  dlib-save.cpp
pytorch-recurrent-neural-networks/: CMakeLists.txt  glovedict.cpp  glovedict.h  imdbdataset.h  imdbreader.cpp  imdbreader.h  main.cpp  rnn.cpp  rnn.h  vocabulary.cpp  vocabulary.h
pytorh_N_N_Image_classification/lenet-pytorch/: CMakeLists.txt  lenet5.cpp  lenet5.h  main.cpp  mnistdataset.cpp  mnistdataset.h
shark-8/shark-classification/: CMakeLists.txt  sharkml-classify.cpp
shogun_export-import-model/shogun-save/: CMakeLists.txt  shogun-save.cpp
shogun_samples/: CMakeLists.txt  linreg_shogun.cc
xtensor_samples/: CMakeLists.txt  linalg_xtensor.cpp
(+212 files in other folders)
